// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.styles App DEVE ser igual ao snapshot 1`] = `
.c0 {
  text-align: center;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`App.styles Botao DEVE ser igual ao snapshot 1`] = `
.c0 {
  width: 100px;
  height: 30px;
  margin: 10px;
  background-color: #aff;
}

<div>
  <button
    class="c0"
    data-escolhido="true"
  />
</div>
`;

exports[`App.styles ContainerBotoes DEVE ser igual ao snapshot 1`] = `
.c0 {
  margin-top: 20px;
  margin-bottom: 50px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`App.styles Header DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  width: 100%;
  height: 100px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`App.styles Item DEVE ser igual ao snapshot 1`] = `
.c0 {
  margin: 10px;
}

<div>
  <a
    class="c0"
  />
</div>
`;

exports[`App.styles Link DEVE ser igual ao snapshot 1`] = `
.c0 {
  color: #61dafb;
}

<div>
  <a
    class="c0"
  />
</div>
`;

exports[`App.styles Logo DEVE ser igual ao snapshot 1`] = `
.c0 {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .c0 {
    animation: fvtopB infinite 20s linear;
  }
}

<div>
  <img
    class="c0"
  />
</div>
`;

exports[`App.styles Main DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`App.styles Nav DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  padding-right: 30px;
}

<div>
  <nav
    class="c0"
  />
</div>
`;

exports[`App.styles Texto DEVE ser igual ao snapshot 1`] = `
<div>
  <p
    class=""
  />
</div>
`;

exports[`App.styles TextoHeader DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-size: 15px;
  color: #fff;
  cursor: pointer;
}

<div>
  <p
    class="c0"
  />
</div>
`;
